add jvm args for cglib in spring-boot tests